==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

v6.0.3 WIP
. (kfsone) Fixed sqrt crash in buildCache.py in multi-station systems

BETA 3: 
CAUTION: So many systems changed with the Beta 3 update that old prices files
won't stand a chance of containing many valid systems. You may want to obtain
a fresh file from one of the online sources, e.g.
maddavo's site: http://www.davek.com.au/td/default.asp

v6.0.2 Nov 20 2014
. (maddavo) Imported additional systems
. (kfsone) Big performance improvements
. (kfsone) Added '--limit' to 'buy' sub-command
. (kfsone) Stop forcing "Chu hub" to be "Chi hub" (Styx)
. (kfsone) Improved speed of cache build

v6.0.1 Nov 16 2014 (kfsone)
. Added "--end" option to "run" for multiple-choice route termination.
. Database refactor to improve runtime performance
-- Some commands were taking upto 50s to load data from the cache.
-- By reorganizing some data and adding better indexes, the run command,
-- for example, went from 60s+ with a full prices file down to 3-4.
. Assorted minor functionality and perf improvements,
. Various bug fixes

NOTE: Rebuilding the cache can now take 2-8 seconds, but you only
pay this price on the first usage after you import a new .prices file
or update a station.

Developers:
. TradeDB.buildLinks now reads from the database instead of building
the link table itself. Reduced execution time from 600+ms to 30ms.
. TradeCalc.getBestHops will lazily load trades for the stations it
is considering, so you do not need to call loadTrades, but you do
still need to clal buildLinks at this time.
. TradeDB now provides loadStationTrades([stationIDs]) which will
load profitable trades *from* the specified list of stationIDs.
. To test for a station not having loaded its trades:
    if stn.tradingWith is None:
        # Not loaded
